--- a/config.json
+++ b/config.json
@@ -17,7 +17,7 @@
     "ignoreCommand": []
   },
   "adminBot": [
-    "61576212342334",
+    "61576956929941",
     ""
   ],
   "whiteListMode": {
@@ -25,8 +25,8 @@
     "whiteListIds": [],
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
-  "nickNameBot": "BABY",
-  "prefix": "?",
+  "nickNameBot": "Rohan",
+  "prefix": "!",
   "database": {
     "type": "sqlite",
     "uriMongodb": "",
